--- a/css/crouselcounter.css
+++ b/css/crouselcounter.css
@@ -129,21 +129,26 @@ input#img-6:checked ~ .carousel-dots label#img-dot-6 {
 input:checked + .slide-container .nav label { display: block; }
 
 
-@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow);
-body {
-  font-family: Open Sans, "Helvetica Neue", "Helvetica", Helvetica, Arial,   sans-serif;
+
+/* body {
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 13px;
-  color: #666;
+  color: black;
   position: relative;
   -webkit-font-smoothing: antialiased;
   margin: 0;
-}
+} */
 
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.counterss{
+  background-color: gainsboro;
+  font-family: 'Roboto Condensed', sans-serif;
+ }
+ 
 
 /* body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, th, td {
   margin: 0;
@@ -178,7 +183,7 @@ body {
 
 .sectiontitle h2 {
   font-size: 30px;
-  color: #222;
+  color:black;
   margin-bottom: 0px;
   padding-right: 10px;
   padding-left: 10px;
@@ -189,7 +194,7 @@ body {
   width: 160px;
   height: 2px;
   display: inline-block;
-  background: #101F2E;
+  background: black;
 }
 
 
@@ -245,7 +250,7 @@ body {
 
 .projectFactsWrap .item span{
   width: 60px;
-  background: rgba(255, 255, 255, 0.8);
+  background: black;
   height: 2px;
   display: block;
   margin: 0 auto;
