--- a/css/crouselcounter.css
+++ b/css/crouselcounter.css
@@ -17,8 +17,7 @@
   box-sizing: border-box;
 }
 .counterss{
- background-image: url(https://cdn.pixabay.com/photo/2017/05/26/14/57/fabric-2346207_1280.jpg);
- filter: grayscale(100%);
+ background-image: url(../img/img1.png);
 
   background-attachment: fixed;
  
