--- a/css/cards.css
+++ b/css/cards.css
@@ -1,11 +1,13 @@
 .myi{
-  background-color: maroon;
+  /* background-color: maroon; */
     text-align: center;
     width: 100%;
-   border-radius: 10%;
+  
+   color: #1F618D;
 }
+
 .crdclr{
-    background-color: honeydew;
+    background-color: #ECF0F1;
     margin-top:20px;
 }
 #myeve{
@@ -16,6 +18,7 @@
   overflow-x: auto;
 }
 .ser-head{
+  padding: 10px;
   font-size: 30px;
     text-align: center;
     font-weight: 900;
