--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,22 @@
 
 
 
-
-
+#owl-demo{
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+    margin: 30px;
+}
+#owl-demo .item{
+    background: transparent;
+    padding: 30px 0px;
+    margin: 10px;
+    color: #FFF;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-align: center;
+  }
 
 
 
@@ -46,12 +60,6 @@
 
 
 
-@media screen and (max-width: 480px) {
-    .phone{
-      background-color: violet;
-      display: inline;
-    }
-   ]
-   }
+
    
    
