--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body{
    }
    
    .about{
-     margin-top: 30px;
+     margin-top: 10px;
    }
   
    #slider,
@@ -138,4 +138,16 @@ body{
      right: 0;
      margin-right: 30px;
    }
+   .mycar{
+    width: 100%;
+  }
+  .carousel-inner{
+    width:100%;
+    max-height: 600px !important;
+  }
+  .cs{
+    display: flex;
+    overflow-x: scroll;
+  }
+  
    
