--- a/css/gallerycss.css
+++ b/css/gallerycss.css
@@ -1,40 +1,26 @@
 .img{
-    width: 360px;
+    width: 250px;
+    height: 250px;
+}
+.bread{
+    width: 100%;
     height: 300px;
+
 }
-.inner{
-    opacity: 0;
-    position: absolute;
-    overflow: auto;
-    top: 30%;
-    left: 40%;
- color: silver;
- background-color: black;
- transition: 1s ease;
+.img{
+    margin: auto;
+    padding-left: 1px;
+    padding-bottom: 5px;
 }
-.inner:hover{
-    border-radius: 30%;
-    opacity: 1;
-    transition: 1s ease;
-}
-.img1{
-    padding: 3%;
-}
+
+
 .img:hover{
    border-width: 8px;
     border-color: darkblue;
     border-style: solid;
     
 }
-
-.main{
-    padding-bottom: 30px;
-    padding-left: 0%;
-    width: 300px;
-    padding-top: 0%;
+.content{
+    width: 800pxx;
     
-}
-.cover{
-    width: 300px;
-    padding-top: 0%;
 }
