--- a/css/faculty.css
+++ b/css/faculty.css
@@ -1,12 +1,25 @@
-.facbread{
- height: 45vh;
-  background-attachment: fixed;
-
-}
-.midle{
+.facbreadcrum {
+  position: relative;
+  text-align: center;
+  color: black;}
+.midle {
+ 
+  padding: 15px;
+  font-weight: 1000;
+  font-size: 50px;
+font-family: 'Playfair Display', serif;;
   position: absolute;
- display: block;
-  top:30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.ob{
+  font-weight: 400px;
+  color: orangered;
+  font-size: 30px;
+}
+.ob,a{
+  color: orangered;
 }
 
 .fac{
@@ -58,4 +71,16 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+  }
+
+  @media screen and (max-width: 480px) {
+    .midle{
+      margin-top: 10px;
+     font-size: 24px;
+    }
+    .ob{
+      font-size: 19px;
+    }
+    .facbreadcrum {
+     margin-top: 8px;}
   }
