--- a/css/faculty.css
+++ b/css/faculty.css
@@ -30,9 +30,10 @@ font-family: 'Playfair Display', serif;;
 .containers {
  
     position: relative;
-    width: 90%;
+    width: 80%;
     margin: 5%;
     justify-content: space-between;
+    margin-left: 10%;
   }
   .containers:hover .image {
     opacity: 0.3;
@@ -45,7 +46,7 @@ font-family: 'Playfair Display', serif;;
   
   .overlay {
     position: absolute;
-    bottom: 0;
+    bottom: 80px;
     left: 0;
     right: 0;
   color:black;
@@ -59,7 +60,19 @@ font-family: 'Playfair Display', serif;;
     height: 70%;
     
   }
-  
+  .name{
+    padding: 5px;
+    text-align: center;
+    font-size: 22px;
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+  .post{
+    text-align: center;
+    font-size: 16px;
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
   .text {
   
     color: black;
