--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body{
 .whole{
 background-color: #e6ffe6;
 }
+#sent{
+  color: black;
+}
+
+#col{
+  color: black;
+}
+
 .events{
     border-radius: 20px;
    margin: 10px;
@@ -57,6 +65,7 @@ background-color: #e6ffe6;
     font-family: 'Roboto Condensed', sans-serif;
 
 }
+
 
 @media screen and (max-width: 780px) {
     .phone{
