--- Auto-Git Commit ---

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ background-color: #e6ffe6;
    
    .about{
      margin-top: 10px;
+     background-color:  #29a329;
+   }
+   .service{
+     background-color: #29a329;
    }
   
   
