--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,13 @@
 body{
-  background-color: fcf6f5ff;
+  background-color:#DEF2F1 ;
 }
-.whole{
-background-color: #ccf5ff;
-}
+
 #sent{
   color: black;
 }
 
-#col{
-  color: black;
+#cols{
+  color: white;
 }
 .pic{
   width: 100px;
@@ -55,7 +53,7 @@ background-color: #ccf5ff;
     text-align: center;
   }
   #card{
-    background-color: lavender;
+    background-color: #DEF2F1 ;
   }
 
 .head{
@@ -98,7 +96,7 @@ background-color: #ccf5ff;
     
    }
    .service{
-     background-color: #0066cc;
+     background-color: #3AAFA9;
    }
   
   
