--- a/css/gallerycss.css
+++ b/css/gallerycss.css
@@ -4,13 +4,16 @@ body{
 .img{
     width: 280px;
     height: 250px;
+    transition: 0.5s ease-in;
 }
 .img1{
     padding: 15px;
     margin: 5px;
-    
+    overflow: hidden;
+    transition: 0.5s ease-in;
    
 }
+
 .gallery{
     position: absolute;
     color: black;
@@ -29,7 +32,7 @@ body{
     padding: 0px;
 }
 .bread{
-    width: 1920px;
+    width: 100%;
     height: 380px;
 
 
@@ -37,21 +40,16 @@ body{
 
 .container{
     
-    margin-left: 4px;
-    padding-left: 3px;
-    margin-right: 2px;
-    padding-right: 1px;
-    border-left: 0px;
-    border-right: 0px;
-    justify-content: stretch;
+  
+  
+    
 }
 
 
 .img:hover{
-   border-width: 8px;
-    border-color: wheat;
-    border-style: solid;
    
+    transform: scale(1.5);
+   transition: 0.5s ease-in-out;
     
     
 }
@@ -59,3 +57,36 @@ body{
     width: 100%;
     
 }
+.facbreadcrum {
+    position: relative;
+    text-align: center;
+    color: black;}
+  .midle {
+   
+    padding: 15px;
+    font-weight: 1000;
+    font-size: 50px;
+  font-family: 'Playfair Display', serif;;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .ob{
+    font-weight: 400px;
+    color: orangered;
+    font-size: 30px;
+  }
+
+  
+  @media screen and (max-width: 480px) {
+    .midle{
+      margin-top: 10px;
+     font-size: 24px;
+    }
+    .ob{
+      font-size: 19px;
+    }
+    .facbreadcrum {
+     margin-top: 8px;}
+  }
