--- Auto-Git Commit ---

--- a/css/acadmics.css
+++ b/css/acadmics.css
@@ -25,7 +25,7 @@ body{
     padding: 15px;
     font-weight: 1000;
     font-size: 50px;
-  font-family: 'Playfair Display', serif;;
+  font-family: 'Playfair Display', serif;
     position: absolute;
     top: 50%;
     left: 50%;
