--- Auto-Git Commit ---

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color:#DEF2F1 ;
+  background-color:#E0F7FA ;
 }
 
 #sent{
@@ -53,7 +53,7 @@ body{
     text-align: center;
   }
   #card{
-    background-color: #DEF2F1 ;
+    background-color: #FFF59D ;
   }
 
 .head{
