--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,24 @@ body{
   
 } */
 
+.result{
+  background-color: burlywood;
+  padding:20px;
+  width: 100%;
+  height: 350px;
+  overflow-y: scroll;
+}
+.result-name{
+padding: 5px;
+padding-top: 24px;
+padding-left: 15px;
+color: black;
+font-weight: 300;
+} 
+.res-img{
+width: 80px;
+height: 80px;
+}
 
 
 @media screen and (max-width: 780px) {
@@ -153,8 +171,27 @@ body{
     }
     .phoneing{
       display: inline;
-      margin: -10px;
+     width: 110%;
     }
+    .result{
+      padding: 5px;
+      margin-left: -10px;
+      width: 102%;
+    }
+    hr{
+      width: auto;
+      height: 7px;
+    }
+.result-name{
+padding-top: 5px;
+ font-size: 1.1rem;
+} 
+.res-img{
+  width: 50px;
+  height: 50px;
+}
+
+  
    #owl-demo{
     overflow-x: scroll;
     justify-content: flex-start;
@@ -190,18 +227,3 @@ body{
     #one{
       width: 100%;
     } */
-    .result-main{
-      background-color: burlywood;
-      padding:30px;
-      width: 100%;
-      height: 500px;
-      overflow-y: scroll;
-    }
-.result-name{
-  padding: 5px;
-  padding-top: 24px;
-  padding-left: 15px;
-  color: black;
-  font-weight: 300;
-} 
-  
