--- a/css/webdeves.css
+++ b/css/webdeves.css
@@ -53,19 +53,35 @@
     transform: scale(1,1);
     transition: all 0.50s linear;
 }
-.profile-card .profile-content{
+.profile-card .profile-content:hover{
     position: absolute;
     top:0;
+    opacity: 1;
     left:0;
     width:100%;
     height:100%;
     padding:50% 4%;
     text-align: center;
     background-color: rgba(255,255,255,0.4);
+    transition: 600ms ease-in-out; 
+}
+
+.profile-card .profile-content{
+    position: absolute;
+    top:0;
+    opacity: 0;
+    left:0;
+    width:100%;
+    height:100%;
+    padding:50% 4%;
+    text-align: center;
+    transition: 600ms ease-in-out; 
+    background-color: rgba(255,255,255,0.4);
 }
 .profile-card .profile-content .title{
-    font-size:24px;
-    color:#333;
+    font-size:22px;
+    font-weight: bold;
+    color:white;
     opacity:0;
     letter-spacing:2px;
     text-transform:uppercase;
