--- a/css/webdeves.css
+++ b/css/webdeves.css
@@ -33,12 +33,12 @@
     transition: all 0.50s linear;
 }
 .profile-card:hover .profile-content:before{
-    top:20px;
-    left:20px;
+    top:15px;
+    left:15px;
 }
 .profile-card:hover .profile-content:after{
-    bottom:20px;
-    right:20px;
+    bottom:15px;
+    right:15px;
 }
 .profile-card .profile-content::after{
     content: "";
@@ -96,7 +96,7 @@
     content:"";
     display:block;
     width:50%;
-    margin:10px auto;
+    margin:0px auto;
     border-bottom:2px solid #222;
 }
 .profile-card .profile-content .title > span{
@@ -106,7 +106,8 @@
     text-transform: capitalize;
 }
 .profile-card .profile-content .social-link{
-    margin:20px 0;
+    margin:10px 0;
+    margin-bottom: 10px;
     padding:0;
     opacity:0;
     transform: translateY(100px);
