--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color:#FAFAFA   ;
+  background-color:#FCFEFF   ;
 }
 
 /* #sent{
@@ -150,13 +150,14 @@ body{
   width: 100%;
   height: 350px;
   overflow-y: scroll;
-  color:white;
+  color:black;
+  
 }
 .result-name{
 padding: 5px;
 padding-top: 24px;
 padding-left: 15px;
-color: white;
+color: black;
 font-weight: 300;
 } 
 .res-img{
