--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,13 @@ body{
  
 } */
 .facbreadcrum {
+
   position: relative;
   text-align: center;
   color: black;}
 .midle {
+  background-color: rgba(255, 255, 255, 0.4);
+ width: 70%;
  
   padding: 0px;
   font-weight: 1000;
