--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ font-family: 'Playfair Display', serif;
   
 
 #owl-demo{
-   background-image: url(https://cdn.pixabay.com/photo/2016/06/29/08/50/pencil-1486278_1280.jpg);
-   background-attachment: fixed;
+   /* background-image: url(https://cdn.pixabay.com/photo/2016/06/29/08/50/pencil-1486278_1280.jpg);
+   background-attachment: fixed; */
     display: flex;
     width: 100%;
  margin-top: 40px ;
