--- a/css/gallerycss.css
+++ b/css/gallerycss.css
@@ -23,7 +23,37 @@ body{
     font-size: 30px;
   }
 
+.album{
+  padding: 20px;
 
+  height: auto;
+}
+.album-row{
+justify-content: space-around;
+  display: flex;
+}
+.imgs{
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+	overflow: hidden;
+  /* padding: 10px; */
+  position: relative;
+
+}
+.album-name{
+  z-index: 100000;
+  position: absolute;
+top: 87%;
+ background-color: rgba(31, 30, 28, 0.329);
+padding-left: 5px;
+ width: 100%;
+ height: 40px;
+ color: cornsilk;
+ font-size: 28px;
+ font-weight: bold;
+}
+.imgs:hover{
+  transform: scale(1.5);
+}
   @media screen and (max-width: 480px) {
    
     .midle{
