--- a/css/gallerycss.css
+++ b/css/gallerycss.css
@@ -33,17 +33,18 @@ justify-content: space-around;
   display: flex;
 }
 .imgs{
-  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  margin: 5px;
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.651);
 	overflow: hidden;
-  /* padding: 10px; */
+  
   position: relative;
 
 }
 .album-name{
-  z-index: 100000;
+
   position: absolute;
 top: 87%;
- background-color: rgba(31, 30, 28, 0.329);
+ background-color: rgba(2, 2, 2, 0.521);
 padding-left: 5px;
  width: 100%;
  height: 40px;
@@ -51,9 +52,20 @@ padding-left: 5px;
  font-size: 28px;
  font-weight: bold;
 }
-.imgs:hover{
-  transform: scale(1.5);
+.imgani{
+  transition: transform 400ms ease-out;
 }
+.imgani:hover{
+  transform: scale(1.3);
+  transition: transform 400ms ease-out;
+  
+}
+.link{
+  padding-top: 3px;
+  font-size: 25px;
+  float: right; padding-right: 10px; 
+}
+
   @media screen and (max-width: 480px) {
    
     .midle{
@@ -65,4 +77,13 @@ padding-left: 5px;
     }
     .facbreadcrum {
      margin-top: 8px;}
+  }
+  @media screen and (max-width: 780px) {
+   .album-row{
+     display: inline;
+   }
+
+    .imgs{
+      margin-bottom: 12px;
+    }
   }
