--- a/css/a1.css
+++ b/css/a1.css
@@ -1,20 +1,29 @@
 .content{
     display: flex;
+    margin: 30px;
 }
 .imgbg{
-    width: 300px;
-    background-color: brown;
-    padding: 10px;
+   
+  border: 4px solid  brown;
+   
     position: relative;
 }
 .name{
+    padding-left: 15px;
     position: absolute;
-    top:90%;
+    top:87%;
     background-color: rgba(43, 25, 3, 0.37);
-    width: 97%;
+    width: 100%;
     color: white;
     font-size: 28px;
     font-weight: bold;
     
 
+
+}
+.cont{
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+    padding-left: 40px;
 }
